[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "openconvert"
description = "CLI tool for connecting to OpenConvert OpenAgents network for file conversion"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "OpenAgents Team", email = "team@openagents.com"},
]
maintainers = [
    {name = "OpenAgents Team", email = "team@openagents.com"},
]
keywords = [
    "file conversion",
    "openagents", 
    "cli",
    "network",
    "format conversion",
    "document conversion"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Communications",
    "Topic :: Internet",
    "Topic :: Multimedia :: Graphics :: Graphics Conversion",
    "Topic :: Office/Business :: Office Suites",
    "Topic :: Text Processing :: Markup",
    "Topic :: Utilities",
]
requires-python = ">=3.8"
dependencies = [
    "pyyaml>=5.4.0",
    "openagents>=0.5.0",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/acenta-ai/openconvert"
Documentation = "https://openconvert.readthedocs.io/"
Repository = "https://github.com/acenta-ai/openconvert"
"Bug Reports" = "https://github.com/acenta-ai/openconvert/issues"

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "pytest-asyncio>=0.18.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.910",
]
docs = [
    "sphinx>=4.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "myst-parser>=0.17.0",
]
service = [
    "agconvert",  # Optional for running conversion services
]

[project.scripts]
openconvert = "openconvert.openconvert_cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["openconvert*"]

[tool.setuptools.dynamic]
version = {attr = "openconvert.__version__"}

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
# mypy needs to know the package path for src layout
mypy_path = "src"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
asyncio_mode = "auto"
# pytest needs to know where to find the package
pythonpath = ["src"] 